k8s/app/root-app.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: root-app
  name: root-app
  namespace: frontend
spec:
  containers:
  - image: gcr.io/masem-sandbox/root-app:2.1
    name: root-app
    ports:
    - containerPort: 3000
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
