k8s/app/second-app.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: second-app
  name: second-app
  namespace: frontend
spec:
  containers:
  - image: gcr.io/masem-sandbox/second-app:1.0
    name: second-app
    ports:
    - containerPort: 3000
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
