k8s/app/third-app.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: third-app
  name: third-app
  namespace: frontend
spec:
  containers:
  - image: gcr.io/masem-sandbox/third-app:2.1
    name: third-app
    ports:
    - containerPort: 3000
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
