k8s/app/root-app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: root-app
  name: root-app-svc
  namespace: frontend
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  type: NodePort
  selector:
    run: root-app
status:
  loadBalancer: {}
