k8s/app/second-app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: second-app
  name: second-app-svc
  namespace: frontend
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    run: second-app
status:
  loadBalancer: {}
