k8s/app/third-app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: third-app
  name: third-app-svc
  namespace: frontend
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    run: third-app
status:
  loadBalancer: {}
