k8s/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: masemfordev-app
  namespace: frontend
  annotations:
    kubernetes.io/ingress.class: "gce"
#    kubernetes.io/ingress.class: "contour"             # <- contour以外のIngress Controllerに作って欲しくない場合
    kubernetes.io/tls-acme: "true"                     # <- 必須か不明なので一応付けました
    kubernetes.io/ingress.allow-http: "false"          # <- httpsのみにしたい場合
    cert-manager.io/cluster-issuer: letsencrypt-issuer # <- 必須か不明なので一応付けました
spec:
  tls:
    - hosts:
        - root-web.masemfordev.com
        - second-web.masemfordev.com
        - third-web.masemfordev.com
        - auth.masemfordev.com
        - masemfordev.com
      secretName: masemfordev-com-tls
  rules:
    - host: root-web.masemfordev.com
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: root-app-svc
                port:
                  number: 3000
    - host: second-web.masemfordev.com
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: second-app-svc
                port:
                  number: 3000
    - host: third-web.masemfordev.com
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: third-app-svc
                port:
                  number: 3000
    - host: auth.masemfordev.com
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: keycloak-svc
                port:
                  number: 8080
